[gd_scene load_steps=50 format=2]

[ext_resource path="res://World/World Scripts/WorldNode.gd" type="Script" id=1]
[ext_resource path="res://Gameplay Scripts/gameplay_script.gd" type="Script" id=2]
[ext_resource path="res://Scenes/fire_screen.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Turret Console.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/status_screen.tscn" type="PackedScene" id=5]
[ext_resource path="res://Gameplay Scripts/target_spawner.gd" type="Script" id=6]
[ext_resource path="res://Sounds/crit_drone.wav" type="AudioStream" id=7]
[ext_resource path="res://Sounds/alarm_claxon.wav" type="AudioStream" id=8]
[ext_resource path="res://End Screen/Scripts/win_screen.gd" type="Script" id=9]
[ext_resource path="res://End Screen/Scripts/win_game_stats.gd" type="Script" id=10]
[ext_resource path="res://Fonts/VT323-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://World/slider_bar.png" type="Texture" id=12]
[ext_resource path="res://World/slider.png" type="Texture" id=13]
[ext_resource path="res://World/World Scripts/aliens_value.gd" type="Script" id=14]
[ext_resource path="res://Backgrounds/console.png" type="Texture" id=15]
[ext_resource path="res://World/World Scripts/settings.gd" type="Script" id=16]
[ext_resource path="res://World/World Scripts/START.gd" type="Script" id=17]
[ext_resource path="res://World/World Scripts/value.gd" type="Script" id=18]
[ext_resource path="res://World/World Scripts/spawn_chance_value.gd" type="Script" id=19]
[ext_resource path="res://Backgrounds/screen.png" type="Texture" id=20]
[ext_resource path="res://End Screen/Scripts/death_screen.gd" type="Script" id=21]
[ext_resource path="res://Sounds/Gameover man.wav" type="AudioStream" id=22]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_intensity = 0.2
glow_strength = 1.32
glow_blend_mode = 0

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 11 )

[sub_resource type="CanvasItemMaterial" id=9]
blend_mode = 1

[sub_resource type="DynamicFont" id=10]
size = 10
font_data = ExtResource( 11 )

[sub_resource type="CanvasItemMaterial" id=11]
blend_mode = 1

[sub_resource type="ImageTexture" id=12]

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 119, 2 )

[sub_resource type="StyleBoxTexture" id=14]

[sub_resource type="StyleBoxTexture" id=15]

[sub_resource type="CanvasItemMaterial" id=16]
blend_mode = 1

[sub_resource type="DynamicFont" id=17]
size = 10
font_data = ExtResource( 11 )

[sub_resource type="Gradient" id=18]
offsets = PoolRealArray( 0.384279, 1 )
colors = PoolColorArray( 0.433594, 0, 0, 1, 0.984314, 0.4, 0.4, 0 )

[sub_resource type="GradientTexture" id=19]
gradient = SubResource( 18 )
width = 336

[sub_resource type="CanvasItemMaterial" id=20]
blend_mode = 1

[sub_resource type="DynamicFont" id=21]
size = 10
font_data = ExtResource( 11 )

[sub_resource type="CanvasItemMaterial" id=22]
blend_mode = 1

[sub_resource type="DynamicFont" id=23]
size = 50
font_data = ExtResource( 11 )

[sub_resource type="CanvasItemMaterial" id=24]
blend_mode = 1

[sub_resource type="DynamicFont" id=25]
size = 12
font_data = ExtResource( 11 )

[sub_resource type="Shader" id=26]
code = "/*
	Glitch Effect Shader by Yui Kinomoto @arlez80

	MIT License
*/

shader_type canvas_item;

// 振動の強さ
uniform float shake_power = 0.03;
// 振動率
uniform float shake_rate : hint_range( 0.0, 1.0 ) = 0.2;
// 振動速度
uniform float shake_speed = 5.0;
// 振動ブロックサイズ
uniform float shake_block_size = 30.5;
// 色の分離率
uniform float shake_color_rate : hint_range( 0.0, 1.0 ) = 0.01;

float random( float seed )
{
	return fract( 543.2543 * sin( dot( vec2( seed, seed ), vec2( 3525.46, -54.3415 ) ) ) );
}

void fragment( )
{
	float enable_shift = float(
		random( trunc( TIME * shake_speed ) )
	<	shake_rate
	);

	vec2 fixed_uv = SCREEN_UV;
	fixed_uv.x += (
		random(
			( trunc( SCREEN_UV.y * shake_block_size ) / shake_block_size )
		+	TIME
		) - 0.5
	) * shake_power * enable_shift;

	vec4 pixel_color = textureLod( SCREEN_TEXTURE, fixed_uv, 0.0 );
	pixel_color.r = mix(
		pixel_color.r
	,	textureLod( SCREEN_TEXTURE, fixed_uv + vec2( shake_color_rate, 0.0 ), 0.0 ).r
	,	enable_shift
	);
	pixel_color.b = mix(
		pixel_color.b
	,	textureLod( SCREEN_TEXTURE, fixed_uv + vec2( -shake_color_rate, 0.0 ), 0.0 ).b
	,	enable_shift
	);
	COLOR = pixel_color;
}"

[sub_resource type="ShaderMaterial" id=27]
shader = SubResource( 26 )
shader_param/shake_power = 0.273
shader_param/shake_rate = 1.0
shader_param/shake_speed = 2.543
shader_param/shake_block_size = 56.375
shader_param/shake_color_rate = 0.0

[node name="WorldNode" type="Node2D"]
position = Vector2( -1, 0 )
script = ExtResource( 1 )

[node name="gameplay_script" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="status_screen" parent="." instance=ExtResource( 5 )]
visible = false
margin_left = 1.0
margin_top = 0.486626
margin_right = 1.0
margin_bottom = 0.486626

[node name="fire_screen" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = 1.0
margin_top = 0.486626
margin_right = 1.0
margin_bottom = 0.486626

[node name="settings" type="Control" parent="."]
margin_right = 321.0
margin_bottom = 180.0
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Turret Console" parent="settings" instance=ExtResource( 4 )]
position = Vector2( 1, 0 )

[node name="START" type="Button" parent="settings"]
material = SubResource( 2 )
margin_left = 21.0
margin_top = 143.488
margin_right = 301.0
margin_bottom = 160.488
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 0.933333, 0.188235, 1 )
custom_colors/font_color_hover = Color( 1, 0.933333, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
shortcut_in_tooltip = false
text = "START"
flat = true
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="settings"]
margin_left = 21.0236
margin_top = 41.0
margin_right = 301.024
margin_bottom = 129.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="names" type="VBoxContainer" parent="settings/HBoxContainer"]
margin_left = 45.0
margin_right = 95.0
margin_bottom = 88.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="settings/HBoxContainer/names"]
margin_top = 22.0
margin_right = 50.0
margin_bottom = 34.0
alignment = 2

[node name="rounds" type="RichTextLabel" parent="settings/HBoxContainer/names/HBoxContainer"]
material = SubResource( 9 )
margin_left = 20.0
margin_right = 50.0
margin_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 30, 12 )
custom_fonts/normal_font = SubResource( 10 )
custom_colors/default_color = Color( 1, 0.933333, 0.188235, 1 )
text = "Rounds:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="settings/HBoxContainer/names"]
margin_top = 38.0
margin_right = 50.0
margin_bottom = 50.0
alignment = 2

[node name="aliens" type="RichTextLabel" parent="settings/HBoxContainer/names/HBoxContainer2"]
material = SubResource( 9 )
margin_left = 20.0
margin_right = 50.0
margin_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 30, 12 )
custom_fonts/normal_font = SubResource( 10 )
custom_colors/default_color = Color( 1, 0.933333, 0.188235, 1 )
text = "Aliens:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="settings/HBoxContainer/names"]
margin_top = 54.0
margin_right = 50.0
margin_bottom = 66.0
alignment = 2

[node name="spawn_chance" type="RichTextLabel" parent="settings/HBoxContainer/names/HBoxContainer3"]
material = SubResource( 9 )
margin_right = 50.0
margin_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 50, 12 )
custom_fonts/normal_font = SubResource( 10 )
custom_colors/default_color = Color( 1, 0.933333, 0.188235, 1 )
text = "Spawn Speed:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slider" type="VBoxContainer" parent="settings/HBoxContainer"]
margin_left = 99.0
margin_right = 218.0
margin_bottom = 88.0
alignment = 1

[node name="rounds_slider" type="HSlider" parent="settings/HBoxContainer/slider"]
material = SubResource( 11 )
margin_top = 22.0
margin_right = 119.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 12 )
size_flags_vertical = 1
custom_icons/tick = SubResource( 12 )
custom_icons/grabber_disabled = ExtResource( 13 )
custom_icons/grabber_highlight = ExtResource( 13 )
custom_icons/grabber = ExtResource( 13 )
custom_styles/slider = SubResource( 13 )
custom_styles/grabber_area_highlight = SubResource( 14 )
custom_styles/grabber_area = SubResource( 15 )
min_value = 1.0
max_value = 500.0
value = 500.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="aliens_slider" type="HSlider" parent="settings/HBoxContainer/slider"]
material = SubResource( 11 )
margin_top = 38.0
margin_right = 119.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 12 )
size_flags_vertical = 1
custom_icons/tick = SubResource( 12 )
custom_icons/grabber_disabled = ExtResource( 13 )
custom_icons/grabber_highlight = ExtResource( 13 )
custom_icons/grabber = ExtResource( 13 )
custom_styles/slider = SubResource( 13 )
custom_styles/grabber_area_highlight = SubResource( 14 )
custom_styles/grabber_area = SubResource( 15 )
min_value = 1.0
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spawn_chance_slider" type="HSlider" parent="settings/HBoxContainer/slider"]
material = SubResource( 11 )
margin_top = 54.0
margin_right = 119.0
margin_bottom = 66.0
rect_min_size = Vector2( 0, 12 )
size_flags_vertical = 1
custom_icons/tick = SubResource( 12 )
custom_icons/grabber_disabled = ExtResource( 13 )
custom_icons/grabber_highlight = ExtResource( 13 )
custom_icons/grabber = ExtResource( 13 )
custom_styles/slider = SubResource( 13 )
custom_styles/grabber_area_highlight = SubResource( 14 )
custom_styles/grabber_area = SubResource( 15 )
min_value = 1.0
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="values" type="VBoxContainer" parent="settings/HBoxContainer"]
margin_left = 222.0
margin_right = 234.0
margin_bottom = 88.0
alignment = 1

[node name="rounds_value" type="RichTextLabel" parent="settings/HBoxContainer/values"]
material = SubResource( 16 )
margin_top = 22.0
margin_right = 12.0
margin_bottom = 34.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 12, 12 )
rect_clip_content = false
custom_fonts/normal_font = SubResource( 17 )
custom_colors/default_color = Color( 1, 0.933333, 0.188235, 1 )
text = "000"
scroll_active = false
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="aliens_value" type="RichTextLabel" parent="settings/HBoxContainer/values"]
material = SubResource( 16 )
margin_top = 38.0
margin_right = 12.0
margin_bottom = 50.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 12, 12 )
rect_clip_content = false
custom_fonts/normal_font = SubResource( 17 )
custom_colors/default_color = Color( 1, 0.933333, 0.188235, 1 )
text = "000"
scroll_active = false
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spawn_chance_value" type="RichTextLabel" parent="settings/HBoxContainer/values"]
material = SubResource( 16 )
margin_top = 54.0
margin_right = 12.0
margin_bottom = 66.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 12, 12 )
rect_clip_content = false
custom_fonts/normal_font = SubResource( 17 )
custom_colors/default_color = Color( 1, 0.933333, 0.188235, 1 )
text = "000"
scroll_active = false
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gun_shot_player" type="AudioStreamPlayer" parent="."]
bus = "gunshots"

[node name="console_beeps" type="AudioStreamPlayer" parent="."]
bus = "beeps"

[node name="crit_drone" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "beeps"

[node name="alarm_claxon" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "alarm"

[node name="alarm_light" type="Light2D" parent="."]
visible = false
position = Vector2( 137, 61.4866 )
rotation = 0.856957
scale = Vector2( 1.24644, 364.451 )
texture = SubResource( 19 )
energy = 2.88

[node name="crit_beep" type="AudioStreamPlayer" parent="."]
bus = "beeps"

[node name="targets" type="Node" parent="."]
script = ExtResource( 6 )

[node name="alien_scream" type="AudioStreamPlayer" parent="."]
volume_db = -5.058
bus = "aliens"

[node name="alien_bang" type="AudioStreamPlayer" parent="."]
bus = "bangs"

[node name="alien_growl" type="AudioStreamPlayer" parent="."]
volume_db = -28.294

[node name="win_screen" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Turret Console" parent="win_screen" instance=ExtResource( 4 )]
position = Vector2( 1, 0 )

[node name="win_game_stats" type="RichTextLabel" parent="win_screen"]
material = SubResource( 20 )
margin_left = 21.0
margin_top = 96.0
margin_right = 301.0
margin_bottom = 160.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/normal_font = SubResource( 21 )
custom_colors/default_color = Color( 1, 0.933333, 0.188235, 1 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false
script = ExtResource( 10 )

[node name="youwin" type="RichTextLabel" parent="win_screen"]
material = SubResource( 22 )
margin_left = 21.0
margin_top = 41.0
margin_right = 301.0
margin_bottom = 92.0
grow_horizontal = 0
grow_vertical = 0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 23 )
custom_colors/default_color = Color( 1, 0.933333, 0.188235, 1 )
bbcode_enabled = true
bbcode_text = "[center]YOU WIN![/center]"
text = "YOU WIN!"
fit_content_height = true
scroll_active = false

[node name="pressrestart" type="RichTextLabel" parent="win_screen"]
material = SubResource( 24 )
margin_left = 21.0
margin_top = 80.0
margin_right = 301.0
margin_bottom = 98.0
custom_fonts/normal_font = SubResource( 25 )
custom_colors/default_color = Color( 1, 0.933333, 0.188235, 1 )
bbcode_enabled = true
bbcode_text = "[center]PRESS ANY KEY TO RESTART[/center]"
meta_underlined = false
text = "PRESS ANY KEY TO RESTART"
fit_content_height = true
scroll_active = false

[node name="death_shader" type="ColorRect" parent="."]
visible = false
material = SubResource( 27 )
margin_left = 19.0
margin_top = 16.0
margin_right = 303.0
margin_bottom = 162.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="death_screen" type="Control" parent="."]
visible = false
margin_right = 321.0
margin_bottom = 180.0
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="console" type="Sprite" parent="death_screen"]
position = Vector2( 161, 90.0846 )
texture = ExtResource( 15 )

[node name="screen" type="Sprite" parent="death_screen"]
position = Vector2( 161.026, 90.3693 )
texture = ExtResource( 20 )

[node name="death_delay" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="game_over" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
volume_db = -7.647

[node name="win_delay" type="Timer" parent="."]
one_shot = true
